--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>Study English</title>
-    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/master.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -45,8 +45,8 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="../scripts/constant.js"></script>
-    <script type="text/javascript" src="../scripts/master.js"></script>
+    <script type="text/javascript" src="scripts/constant.js"></script>
+    <script type="text/javascript" src="scripts/master.js"></script>
     <script>
         const openEssential = () => location.href = `${PATH.ESSENTIAL_ROUTE}flashcard-list.html`;
         const openSentences = ()  => location.href = `${PATH.DEFAULT_ROUTE}sentences.html`;
